# Parrot

./: CMakeLists.txt  CMakePresets.json
Parrot/: CMakeLists.txt
Parrot/parrotSrc/: test1.par
Parrot/src/: Parrot.cpp
Parrot/src/lib/: Parrot.hpp  import.hpp
Parrot/src/lib/core/: parse.cpp  parse.hpp
Parrot/src/lib/utils/: Hash.cpp  Hash.hpp  Log.cpp  Log.hpp  Time.cpp  Time.hpp
